--- a/prompting.ipynb
+++ b/prompting.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKyJQZVCJ6e0AF8RIUYk5T",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNmXRYM7tPGyPjj8c1FFKyw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,133 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# This is the start of our very first agentic ai class"
+      ],
       "metadata": {
-        "id": "mD9bHhQiqceP"
+        "id": "9GKG7hk0tV8I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -U -q \"google-generativeai>=0.7.2\" # Install Python SDK"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "1-RAiReUtc6x"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import google.generativeai as genai"
+      ],
+      "metadata": {
+        "id": "61NToNyIttpS"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Add API keys"
+      ],
+      "metadata": {
+        "id": "P55BJjkEt9f6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "GOOGLE_API_KEY = userdata.get('GOOGLE_API_KEY')\n",
+        "genai.configure(api_key=GOOGLE_API_KEY)"
+      ],
+      "metadata": {
+        "id": "lRJfj1zzuDfP"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Running my first prompt"
+      ],
+      "metadata": {
+        "id": "8dLcVt2KvSOy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = genai.GenerativeModel('gemini-1.5-flash')"
+      ],
+      "metadata": {
+        "id": "9TGW9e9FvPx_"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q7qBWPP0v_VM",
+        "outputId": "4510c452-5096-4201-c7ff-a57d01f2225f"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "genai.GenerativeModel(\n",
+              "    model_name='models/gemini-1.5-flash',\n",
+              "    generation_config={},\n",
+              "    safety_settings={},\n",
+              "    tools=None,\n",
+              "    system_instruction=None,\n",
+              "    cached_content=None\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = model.generate_content('Give me welcome, im generative AI')"
+      ],
+      "metadata": {
+        "id": "KMi4_4RDv9B2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(response.text)"
+      ],
+      "metadata": {
+        "id": "VzJkWHbMyLfm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
