--- a/prompting.ipynb
+++ b/prompting.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOb7rcGGhxRNc1A///3kkcC",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMPI120L88XRYuuwDIVWsll",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -322,11 +323,11 @@
         "print(response_2.text)"
       ],
       "metadata": {
-        "id": "1LCCVC6SpQcq",
-        "outputId": "f47ffd10-a64f-4389-9255-20bcdff6f3fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1LCCVC6SpQcq",
+        "outputId": "f47ffd10-a64f-4389-9255-20bcdff6f3fb"
       },
       "execution_count": 18,
       "outputs": [
@@ -350,6 +351,103 @@
             "  ]\n",
             "}\n",
             "```\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Starting a Chat"
+      ],
+      "metadata": {
+        "id": "I9VZJfZRp7nj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = genai.GenerativeModel('gemini-1.5-flash')"
+      ],
+      "metadata": {
+        "id": "2aCaZu1YqEaT"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chat = model.start_chat(history=[])"
+      ],
+      "metadata": {
+        "id": "yfIz2_iUqNfi"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response_3 = chat.send_message(\"In one sentence, explain to a 6 year old how a computer works\")"
+      ],
+      "metadata": {
+        "id": "XITIujYaqXeR"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(response_3.text)"
+      ],
+      "metadata": {
+        "id": "Mwg6c3khqhnw",
+        "outputId": "158660da-9544-4a6e-d8d6-64c6e3094151",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A computer is like a really smart brain that follows instructions to show you pictures, play games, and do lots of other cool things!\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(chat.history)"
+      ],
+      "metadata": {
+        "id": "IuSHAoQyrK1h",
+        "outputId": "73147c93-072e-4c6d-973c-26b611bfda49",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[parts {\n",
+            "  text: \"In one sentence, explain to a 6 year old how a computer works\"\n",
+            "}\n",
+            "role: \"user\"\n",
+            ", parts {\n",
+            "  text: \"A computer is like a really smart brain that follows instructions to show you pictures, play games, and do lots of other cool things!\\n\"\n",
+            "}\n",
+            "role: \"model\"\n",
+            "]\n"
           ]
         }
       ]
